# robotkernel_generator

./: Makefile.am  conanfile.py  configure.ac  configure.ac.in  rmc-build.yaml
.github/workflows/: build-deb.yaml  makefile.yml
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  robotkernel-service-helper.cron.d.ex  robotkernel-service-helper.doc-base.EX  robotkernel-service-helper.install  rules  watch.ex
share/robotkernel_generator/module_creator/: Makefile.am  conanfile.py  configure.ac.in  github_workflows_build-deb.yaml
share/robotkernel_generator/module_creator/debian/: README  README.Debian  README.source  changelog  control  copyright
src/: module_creator  rk_generate  service_generate
